--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-calendar-component": "^2.8.2",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
     "@vue/cli-service": "^3.9.0",
+    "axios": "^0.19.0",
+    "vue-axios": "^2.1.4",
     "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
